fix(responsivemess): Prevent image stretching on tablet and mobile.
Adjusted CSS to improve responsive behavior across breakpoints.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,6 +155,7 @@ ul > li > a:hover {
   margin-top: 1.81rem;
   padding: 0.81rem 2.19rem 0.69rem 1.94rem;
   cursor: pointer;
+  transition: 0.6s;
 }
 
 .top-story-read button:hover {
@@ -186,6 +187,7 @@ ul > li > a:hover {
   margin-bottom: 0.5rem;
   margin-top: 1.94rem;
   cursor: pointer;
+  transition: 0.6s;
 }
 
 .snippet h3:hover {
@@ -217,13 +219,16 @@ hr {
   display: flex;
   gap: 1.88rem;
   margin-top: 4.44rem;
-  height: 8.06rem;
 }
 
 .article {
   display: flex;
   gap: 4.1%;
   width: 31.53%;
+}
+
+.article img {
+  height: 8.06rem;
 }
 
 .a-texts {
@@ -246,6 +251,7 @@ hr {
   font-weight: var(--heading-xs-font-weight);
   letter-spacing: var(--heading-xs-letter-spacing);
   line-height: var(--heading-xs-line-height);
+  transition: 0.3s;
 }
 
 .a-texts h3:hover {
@@ -313,7 +319,7 @@ hr {
   .articles-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
+    grid-auto-rows: 1fr;
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
   }
@@ -370,6 +376,7 @@ hr {
 
   .main-story img {
     height: 18.75rem;
+    object-fit: cover;
   }
 
   .top-story-desc {
@@ -420,11 +427,13 @@ hr {
     display: flex;
     gap: 6.9%;
     width: auto;
+    align-items: stretch;
     /* height: 8.06rem; */
   }
 
   .article img {
-    width: 6.25rem;
+    width: fit-content;
+    object-fit: cover;
   }
 }
 
@@ -441,6 +450,7 @@ hr {
 
   .article img {
     width: auto;
+    height: fit-content;
   }
 
 
